# extensions-SpinOff

./: CMakeLists.txt  Setup.cmake  SpinOff.dist
Renderers/OpenGL/: MRIRenderingView.cpp  MRIRenderingView.h
Scene/: MRINode.cpp  MRINode.h
